--- a/src/app/Admin/Poste/getpostebyid/getpostebyid.component.html
+++ b/src/app/Admin/Poste/getpostebyid/getpostebyid.component.html
@@ -5,12 +5,9 @@
             <h2 *ngIf="poste">{{poste.titre}}</h2>
             <h6>Reference du poste : #{{poste.id}}</h6>
             <button (click)="redirectToFullCalendar(postId)">Full Calendar</button>
-          </div>
-        
+          </div> 
     <h6>Nombre de poste ouverts : {{poste.nombrePostesDisponibles}} </h6>
-   
     <div class="row">
-       <!-- Première carte de tableau de bord -->
        <div class="col-md-4">
         <div class="card pending">
           <div class="card-body">
@@ -19,7 +16,6 @@
           </div>
         </div>
       </div>
-      
        <div class="col-md-4">
          <div class="card accepted">
            <div class="card-body">
@@ -28,11 +24,6 @@
            </div>
          </div>
        </div>
-   
-       <!-- Deuxième carte de tableau de bord -->
-      
-   
-       <!-- Troisième carte de tableau de bord -->
        <div class="col-md-4">
          <div class="card rejected">
            <div class="card-body">
@@ -59,10 +50,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" id="purchases-tab" data-bs-toggle="tab" href="#purchases" role="tab" aria-controls="purchases" aria-selected="false">Pipeline Candidat</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="purchases-tab" data-bs-toggle="tab" href="#full-calendar" role="tab" aria-controls="full-calendar" aria-selected="false">Full Calendar</a>
-            </li>
+            </li>     
           </ul>
           <div class="tab-content py-0 px-0">
             <div class="tab-pane fade show active" id="overview" role="tabpanel" aria-labelledby="overview-tab">
@@ -130,9 +118,6 @@
                   
                               </div>
                               <div class="tab-pane fade" id="purchases" role="tabpanel" aria-labelledby="purchases-tab">
-                                <!-- app.component.html -->
-                               
-                     <!-- app.component.html -->
                      <div class="kanban-board" cdKDropListGroup>
                        <!-- Colonne En attente -->
                        <div class="kanban-column"  style="  border-top: 5px solid #edf127;
@@ -170,6 +155,43 @@
                      
                          </div>
                        </div>
+                       <div
+                       class="kanban-column"
+                       style="border-top: 5px solid #68065d"
+                       cdkDropList
+                       [cdkDropListData]="candidatures"
+                       id="EN_ATTENTE_ENTRETIEN"
+                       (cdkDropListDropped)="onDrop($event, 'EN_ATTENTE_ENTRETIEN')"
+                       [cdkDropListConnectedTo]="['Entretien', 'ACCEPTEE', 'REFUSEE']"
+                     >
+                       <h3>En Attente Entretien</h3>
+                       <div
+                         class="kanban-cards"
+                         *ngFor="
+                           let candidature of candidatures
+                             | filter : 'EN_ATTENTE_ENTRETIEN'
+                         "
+                         cdkDrag
+                         [id]="candidature.candidature_id"
+                       >
+                         <div class="kanban-card">
+                           <img
+                             class="profile-image rounded-circle"
+                             [src]="'assets/images/' + candidature.image"
+                             alt="Profile Image"
+                           />
+                           <div class="profile-info">
+                             {{ candidature.nom }} {{ candidature.prenom }}
+                           </div>
+                           <button
+                             (click)="openModal(candidature.collaborateur_id)"
+                             class="btn btn-inverse-secondary btn-icon"
+                           >
+                             <i class="mdi mdi mdi-eye"></i>
+                           </button>
+                         </div>
+                       </div>
+                     </div>
                        <!--Colonne  Entretien -->
                        <div class="kanban-column"  style="  border-top: 5px solid #68065d;
                        " cdkDropList [cdkDropListData]="candidatures" id="Entretien" (cdkDropListDropped)="onDrop($event, 'Entretien')" [cdkDropListConnectedTo]="['ACCEPTEE', 'REFUSEE']">
@@ -233,9 +255,7 @@
                                    
                                                   
                                  </div>
-                                 <div class="tab-pane fade" id="full-calendar" role="tabpanel" aria-labelledby="full-calendar-tab">
-                                    <full-calendar [options]="calendarOptions"></full-calendar>    
-                                                             </div>
+                                 
                                
 
 
