--- a/src/app/Collaborateur/Entretien/interview-online/interview-online.component.html
+++ b/src/app/Collaborateur/Entretien/interview-online/interview-online.component.html
@@ -1,6 +1,12 @@
-<div class="container pt-5 pl-5" style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh;">
-    <div id="jitsi-iframe" style="margin-bottom: 1rem; margin-left: 200px;"></div>
-  
-  
-  </div>
-  
+<div
+  class="container pt-5 pl-5"
+  style="
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  "
+>
+  <div id="jitsi-iframe" style="margin-bottom: 1rem"></div>
+</div>
