--- a/src/app/menu/manager-menu/manager-menu.component.html
+++ b/src/app/menu/manager-menu/manager-menu.component.html
@@ -1,38 +1,69 @@
 <div class="container-scroller">
- 
   <!-- partial:partials/_navbar.html -->
   <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
-  
     <div class="navbar-brand-wrapper d-flex justify-content-center">
-      <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">  
-        <a class="navbar-brand brand-logo" href="index.html"><img src="../../../assets/images/logos.PNG"alt="logo"/></a>
-        <a class="navbar-brand brand-logo-mini" href="index.html"><img src="../../../assets/images/sopralogo.png" alt="logo"/></a>
-        <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
+      <div
+        class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100"
+      >
+        <a class="navbar-brand brand-logo" href="index.html"
+          ><img src="../../../assets/images/logos.PNG" alt="logo"
+        /></a>
+        <a class="navbar-brand brand-logo-mini" href="index.html"
+          ><img src="../../../assets/images/sopralogo.png" alt="logo"
+        /></a>
+        <button
+          class="navbar-toggler navbar-toggler align-self-center"
+          type="button"
+          data-toggle="minimize"
+        >
           <span class="mdi mdi-sort-variant"></span>
         </button>
-      </div>  
+      </div>
     </div>
-    <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
+    <div
+      class="navbar-menu-wrapper d-flex align-items-center justify-content-end"
+    >
       <ul class="navbar-nav mr-lg-4 w-100">
         <li class="nav-item nav-search d-none d-lg-block w-100">
-          <h3 class="mb-0 " style="font-family: Georgia, 'Times New Roman', Times, serif; color: rgb(105, 97, 97);">Espace Manager Service</h3>
+          <h3
+            class="mb-0"
+            style="
+              font-family: Georgia, 'Times New Roman', Times, serif;
+              color: rgb(105, 97, 97);
+            "
+          >
+            Espace Manager Service
+          </h3>
         </li>
       </ul>
       <ul class="navbar-nav navbar-nav-right">
         <li class="nav-item dropdown me-1">
-          <a class="nav-link count-indicator dropdown-toggle d-flex justify-content-center align-items-center" id="messageDropdown" href="#" data-bs-toggle="dropdown">
+          <a
+            class="nav-link count-indicator dropdown-toggle d-flex justify-content-center align-items-center"
+            id="messageDropdown"
+            href="#"
+            data-bs-toggle="dropdown"
+          >
             <i class="mdi mdi-message-text mx-0"></i>
             <span class="count"></span>
           </a>
-          <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="messageDropdown">
-            <p class="mb-0 font-weight-normal float-left dropdown-header">Messages</p>
+          <div
+            class="dropdown-menu dropdown-menu-right navbar-dropdown"
+            aria-labelledby="messageDropdown"
+          >
+            <p class="mb-0 font-weight-normal float-left dropdown-header">
+              Messages
+            </p>
             <a class="dropdown-item">
               <div class="item-thumbnail">
-                  <img src="images/faces/face4.jpg" alt="image" class="profile-pic">
+                <img
+                  src="images/faces/face4.jpg"
+                  alt="image"
+                  class="profile-pic"
+                />
               </div>
               <div class="item-content flex-grow">
-                <h6 class="ellipsis font-weight-normal">David Grey
-                </h6>
+                <h6 class="ellipsis font-weight-normal">David Grey</h6>
                 <p class="font-weight-light small-text text-muted mb-0">
                   The meeting is cancelled
                 </p>
@@ -40,11 +71,14 @@
             </a>
             <a class="dropdown-item">
               <div class="item-thumbnail">
-                  <img src="images/faces/face2.jpg" alt="image" class="profile-pic">
+                <img
+                  src="images/faces/face2.jpg"
+                  alt="image"
+                  class="profile-pic"
+                />
               </div>
               <div class="item-content flex-grow">
-                <h6 class="ellipsis font-weight-normal">Tim Cook
-                </h6>
+                <h6 class="ellipsis font-weight-normal">Tim Cook</h6>
                 <p class="font-weight-light small-text text-muted mb-0">
                   New product launch
                 </p>
@@ -52,11 +86,14 @@
             </a>
             <a class="dropdown-item">
               <div class="item-thumbnail">
-                  <img src="images/faces/face3.jpg" alt="image" class="profile-pic">
+                <img
+                  src="images/faces/face3.jpg"
+                  alt="image"
+                  class="profile-pic"
+                />
               </div>
               <div class="item-content flex-grow">
-                <h6 class="ellipsis font-weight-normal"> Johnson
-                </h6>
+                <h6 class="ellipsis font-weight-normal">Johnson</h6>
                 <p class="font-weight-light small-text text-muted mb-0">
                   Upcoming board meeting
                 </p>
@@ -65,12 +102,22 @@
           </div>
         </li>
         <li class="nav-item dropdown me-4">
-          <a class="nav-link count-indicator dropdown-toggle d-flex align-items-center justify-content-center notification-dropdown" id="notificationDropdown" href="#" data-bs-toggle="dropdown">
+          <a
+            class="nav-link count-indicator dropdown-toggle d-flex align-items-center justify-content-center notification-dropdown"
+            id="notificationDropdown"
+            href="#"
+            data-bs-toggle="dropdown"
+          >
             <i class="mdi mdi-bell mx-0"></i>
             <span class="count"></span>
           </a>
-          <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="notificationDropdown">
-            <p class="mb-0 font-weight-normal float-left dropdown-header">Notifications</p>
+          <div
+            class="dropdown-menu dropdown-menu-right navbar-dropdown"
+            aria-labelledby="notificationDropdown"
+          >
+            <p class="mb-0 font-weight-normal float-left dropdown-header">
+              Notifications
+            </p>
             <a class="dropdown-item">
               <div class="item-thumbnail">
                 <div class="item-icon bg-success">
@@ -114,23 +161,35 @@
         </li>
 
         <li class="nav-item nav-profile dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="profileDropdown">
-            <img [src]="'assets/images/' + image" alt="profile"/>
-            <span class="nav-profile-name">{{username}}</span>
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            data-bs-toggle="dropdown"
+            id="profileDropdown"
+          >
+            <img [src]="'assets/images/' + image" alt="profile" />
+            <span class="nav-profile-name">{{ username }}</span>
           </a>
-          <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
+          <div
+            class="dropdown-menu dropdown-menu-right navbar-dropdown"
+            aria-labelledby="profileDropdown"
+          >
             <a class="dropdown-item" [routerLink]="['/managerService/profile']">
               <i class="mdi mdi-settings text-primary"></i>
               Mon Compte
             </a>
             <a class="dropdown-item" (click)="logout()">
-              <i class="mdi mdi-logout text-primary" ></i>
+              <i class="mdi mdi-logout text-primary"></i>
               Se deconnecter
             </a>
           </div>
         </li>
       </ul>
-      <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
+      <button
+        class="navbar-toggler navbar-toggler-right d-lg-none align-self-center"
+        type="button"
+        data-toggle="offcanvas"
+      >
         <span class="mdi mdi-menu"></span>
       </button>
     </div>
@@ -146,24 +205,51 @@
             <span class="menu-title">Dashboard</span>
           </a>
         </li>
-       
-       
+
         <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
+          <a
+            class="nav-link"
+            data-bs-toggle="collapse"
+            href="#ui-basic"
+            aria-expanded="false"
+            aria-controls="ui-basic"
+          >
             <i class="mdi mdi mdi-briefcase menu-icon"></i>
             <span class="menu-title">Fiches de Postes</span>
             <i class="menu-arrow"></i>
           </a>
           <div class="collapse" id="ui-basic">
             <ul class="nav flex-column sub-menu">
-              <li class="nav-item"> <a class="nav-link" [routerLink]="['/managerService/mes-postes']">Gestion de poste  </a></li>
-              <li class="nav-item"> <a class="nav-link" [routerLink]="['/managerService/postes-approuve']">Demandes Approuvées</a></li>
-              <li class="nav-item"> <a class="nav-link"  [routerLink]="['/managerService/poste-publie']">Demandes publiées</a></li>
-
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  [routerLink]="['/managerService/mes-postes']"
+                  >Gestion de poste
+                </a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  [routerLink]="['/managerService/postes-approuve']"
+                  >Demandes Approuvées</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  [routerLink]="['/managerService/poste-publie']"
+                  >Demandes publiées</a
+                >
+              </li>
             </ul>
           </div>
         </li>
-       
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/managerService/mes-entretiens']">
+            <i class="mdi mdi-camcorder menu-icon"></i>
+            <span class="menu-title">Mes Entretiens </span>
+          </a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="pages/charts/chartjs.html">
             <i class="mdi mdi-chart-pie menu-icon"></i>
@@ -182,7 +268,7 @@
             <span class="menu-title">Icons</span>
           </a>
         </li>
-       
+
         <li class="nav-item">
           <a class="nav-link" href="documentation/documentation.html">
             <i class="mdi mdi-file-document-box-outline menu-icon"></i>
@@ -194,19 +280,30 @@
     <!-- partial -->
     <div class="main-panel">
       <div class="content-wrapper">
-        
-       
-        
         <router-outlet></router-outlet>
-       
       </div>
       <!-- content-wrapper ends -->
       <!-- partial:partials/_footer.html -->
       <footer class="footer">
-      <div class="d-sm-flex justify-content-center justify-content-sm-between">
-        <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © <a href="https://www.bootstrapdash.com/" target="_blank">bootstrapdash.com </a>2021</span>
-        <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Only the best <a href="https://www.bootstrapdash.com/" target="_blank"> Bootstrap dashboard  </a> templates</span>
-      </div>
+        <div
+          class="d-sm-flex justify-content-center justify-content-sm-between"
+        >
+          <span
+            class="text-muted text-center text-sm-left d-block d-sm-inline-block"
+            >Copyright ©
+            <a href="https://www.bootstrapdash.com/" target="_blank"
+              >bootstrapdash.com </a
+            >2021</span
+          >
+          <span
+            class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"
+            >Only the best
+            <a href="https://www.bootstrapdash.com/" target="_blank">
+              Bootstrap dashboard
+            </a>
+            templates</span
+          >
+        </div>
       </footer>
       <!-- partial -->
     </div>
