evaluation de l entretien

--- a/src/app/Manager/mes-entretien-manager/mes-entretien-manager.component.html
+++ b/src/app/Manager/mes-entretien-manager/mes-entretien-manager.component.html
@@ -29,9 +29,13 @@
           </p>
 
           <button
-            class="btn btn-inverse-primary"
-            (click)="joinInterview(entretien.entretien.roomId)"
-          >
+          class="btn btn-inverse-primary"
+          (click)="
+            joinInterview(
+              entretien.entretien.roomId,
+              entretien.entretien.id        )
+          "
+        >
             Rejoindre l'interview
           </button>
         </div>
