--- a/src/app/Collaborateur/Entretien/mes-entretiens/mes-entretiens.component.html
+++ b/src/app/Collaborateur/Entretien/mes-entretiens/mes-entretiens.component.html
@@ -5,6 +5,7 @@
         <div class="card-body">
           <div class="d-flex justify-content-between mb-3">
             <h5 class="card-title">{{ entretien.entretien.poste.titre }}</h5>
+
             <p class="card-title">Ref: #{{ entretien.entretien.id }}</p>
           </div>
 
@@ -31,7 +32,11 @@
 
           <button
             class="btn btn-inverse-primary"
-            (click)="joinInterview(entretien.entretien.roomId)"
+            (click)="
+              joinInterview(
+                entretien.entretien.roomId,
+                entretien.entretien.id           )
+            "
           >
             Rejoindre l'interview
           </button>
