--- a/src/app/Collaborateur/Entretien/mes-entretiens/mes-entretiens.component.html
+++ b/src/app/Collaborateur/Entretien/mes-entretiens/mes-entretiens.component.html
@@ -6,7 +6,7 @@
           <div class="d-flex justify-content-between mb-3">
             <h5 class="card-title">{{ entretien.entretien.poste.titre }}</h5>
 
-            <p class="card-title">Ref: #{{ entretien.entretien.id }}</p>
+            <p class="card-title">Ref: #{{ entretien.entretien.poste.id }}</p>
           </div>
 
           <h6 class="card-subtitle mb-2" style="color: rgb(72, 55, 55)">
