--- a/src/app/menu/admin-menu/admin-menu.component.html
+++ b/src/app/menu/admin-menu/admin-menu.component.html
@@ -156,6 +156,8 @@
             <ul class="nav flex-column sub-menu">
               <li class="nav-item"> <a class="nav-link" [routerLink]="['/managerRh/all-manager-service']" > Manager Service </a></li>
               <li class="nav-item"> <a class="nav-link"  [routerLink]="['/managerRh/all-collaborateur']"> Collaborateur </a></li>
+              <li class="nav-item"> <a class="nav-link"  [routerLink]="['/managerRh/all-formateurs']"> Formateur </a></li>
+
            </ul>
           </div>
         </li>
