--- a/src/app/menu/collab-menu/collab-menu.component.html
+++ b/src/app/menu/collab-menu/collab-menu.component.html
@@ -217,6 +217,12 @@
           </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/collaborateur/all-formations']">
+            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
+            <span class="menu-title">Formations</span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a
             class="nav-link"
             [routerLink]="['/collaborateur/mes-postulations']"
@@ -254,12 +260,7 @@
           </a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="documentation/documentation.html">
-            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
-            <span class="menu-title">Documentation</span>
-          </a>
-        </li>
+       
       </ul>
     </nav>
     <!-- partial -->
