--- a/src/app/Collaborateur/Formation/formation-detail/formation-detail.component.html
+++ b/src/app/Collaborateur/Formation/formation-detail/formation-detail.component.html
@@ -23,7 +23,7 @@
                       width="600px"
                       height="200px"
                     />
-                    <button class="btn btn-inverse-success">
+                    <button class="btn btn-inverse-success" (click)="postulerAuPoste(formationId)">
                       Demander cette formation
                     </button>
                   </div>
