--- a/src/app/Collaborateur/Formation/formation-detail/formation-detail.component.html
+++ b/src/app/Collaborateur/Formation/formation-detail/formation-detail.component.html
@@ -23,9 +23,9 @@
                       width="600px"
                       height="200px"
                     />
-                    <button class="btn btn-inverse-success" (click)="postulerAuPoste(formationId)">
+                    <!-- <button class="btn btn-inverse-success" (click)="postulerAuPoste(formationId)">
                       Demander cette formation
-                    </button>
+                    </button> -->
                   </div>
                 </div>
               </div>
