--- a/src/app/menu/admin-menu/admin-menu.component.html
+++ b/src/app/menu/admin-menu/admin-menu.component.html
@@ -182,6 +182,18 @@
            </ul>
           </div>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/managerRh/mes-entretiens-Rh']">
+            <i class="mdi mdi-camcorder menu-icon"></i>
+            <span class="menu-title">Mes Entretiens </span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/managerRh/all-formations']">
+            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
+            <span class="menu-title">Formations</span>
+          </a>
+        </li>
         <!-- <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
             <i class="mdi mdi-circle-outline menu-icon"></i>
