--- a/src/app/menu/manager-menu/manager-menu.component.html
+++ b/src/app/menu/manager-menu/manager-menu.component.html
@@ -245,6 +245,22 @@
           </div>
         </li>
         <li class="nav-item">
+          <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
+            <span class="menu-title">Formations</span>
+            <i class="menu-arrow"></i>
+          </a>
+          <div class="collapse" id="auth">
+            <ul class="nav flex-column sub-menu">
+              <li class="nav-item"> <a class="nav-link" [routerLink]="['#']" > Catalogue </a></li>
+              <li class="nav-item"> <a class="nav-link"  [routerLink]="['#']"> Mes Demandes  </a></li>
+              <li class="nav-item"> <a class="nav-link"  [routerLink]="['/managerService/demande-formation']"> Demandes Des Collabs  </a></li>
+
+
+           </ul>
+          </div>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['/managerService/mes-entretiens']">
             <i class="mdi mdi-camcorder menu-icon"></i>
             <span class="menu-title">Mes Entretiens </span>
